# venkat

./: .gitignore  MASTER_RUN.command  MASTER_RUN.sh  README.md  launch_all.sh  pyproject.toml  requirements.txt
config/: config.yaml
dags/: cifar10_training_pipeline.py
scripts/: compare_runs.py  run_evaluation.py  run_training.py  setup_airflow.py  setup_mlflow.py  start_services.sh
src/: config_loader.py  data_preprocessing.py  evaluate.py  model.py  model_registry.py  train.py
tests/: test_pipeline.py
